Adicionando data e hora

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="conteudo">
         <h1 class="title">Plan your life!</h1>
+        <div class="hour-minutes">
+            <p id="hour"></p>
+        </div>
+        <div class="date">
+            <p id="date"></p>
+        </div>
         <div class="topo">
             <input type="text" id="inputNovaTarefa" placeholder="Adicione uma nova tarefa">
             <button id="btnAddTarefa">
