Adicionando style para data e hora

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
     <div class="conteudo">
         <h1 class="title">Plan your life!</h1>
-        <div class="hour-minutes">
-            <p id="hour"></p>
-        </div>
-        <div class="date">
-            <p id="date"></p>
+        <div class="time">
+            <div class="hour-minutes">
+                <p id="hour"></p>
+            </div>
+            <div class="date">
+                <p id="date"></p>
+            </div>
         </div>
         <div class="topo">
-            <input type="text" id="inputNovaTarefa" placeholder="Adicione uma nova tarefa">
+            <input type="text" id="inputNovaTarefa" placeholder="Type new task">
             <button id="btnAddTarefa">
                 <i class="fa fa-plus"></i>
             </button>
